Добавлены файлы чата

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <h1>WebSocket Чат</h1>
   <div class="chat-container" id="chat"></div>
   <div class="input-area">
-    <input type="text" id="messageInput" placeholder="Введите сообщени...">
+    <input type="text" id="messageInput" placeholder="Введите сообщение...">
     <button id="sendBtn">Отправить</button>
     <button id="geoBtn" class="geo-btn">Гео-локация</button>
   </div>
